; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-banout.c_banout_string_equals.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-banout.c_banout_string_equals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BannerOutput = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.BannerOutput*, i32, i8*)* @banout_string_equals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @banout_string_equals(%struct.BannerOutput* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.BannerOutput*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.BannerOutput* %0, %struct.BannerOutput** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %11 = load %struct.BannerOutput*, %struct.BannerOutput** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i8* @banout_string(%struct.BannerOutput* %11, i32 %12)
  store i8* %13, i8** %8, align 8
  %14 = load %struct.BannerOutput*, %struct.BannerOutput** %5, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @banout_string_length(%struct.BannerOutput* %14, i32 %15)
  store i64 %16, i64* %9, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i64 @strlen(i8* %17)
  store i64 %18, i64* %10, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* %10, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %30

23:                                               ; preds = %3
  %24 = load i8*, i8** %8, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i64, i64* %10, align 8
  %27 = call i64 @memcmp(i8* %24, i8* %25, i64 %26)
  %28 = icmp eq i64 %27, 0
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %23, %22
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i8* @banout_string(%struct.BannerOutput*, i32) #1

declare dso_local i64 @banout_string_length(%struct.BannerOutput*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
